# thunderbolt-software-user-space

./: .clang-format  .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  CODEOWNERS  COPYING  COPYING.libtbtfwu  ChangeLog.daemon  ChangeLog.libtbtfwu  ChangeLog.tbtfwucli  Changelog  Description  README  README.libtbtfwu  README.md  README.tbtfwucli  TESTING.md
ThunderboltService/Linux/: make_eclipse  post_install_script.cmake  thunderbolt.cpp
ThunderboltService/Linux/config/: com.Intel.Thunderbolt.service  thunderbolt.service  uninstall.sh
ThunderboltService/Linux/include/: ConnectionManager.h  Controller.h  DBusController.h  DBusControllers.h  GenlWrapper.h  IP2PDevice.h  LinuxControllerCommandSender.h  MessageUtils.h  P2PDevice.h  logind_manager_proxy.h  typedef.h
ThunderboltService/Linux/include/dbus/: dbus_controller_adapter.h  dbus_controllers_adapter.h
ThunderboltService/Linux/src/: Controller.cpp  DBusControllers.cpp  LinuxControllerCommandSender.cpp  P2PDevice.cpp  Port.cpp
ThunderboltService/Shared/CommonUtils/: CountingSemaphore.h  ScopeGuard.cpp  ScopeGuard.h
ThunderboltService/Shared/include/: ControllerCommandSenderBase.h  IConnectionManager.h  IControllerCommandSender.h  ISerializable.h  TbtWmiApproveP2P.h  TbtWmiMessageToFW.h  UniqueID.h
ThunderboltService/Shared/src/: ControllerDetails.cpp  ControllerSettings.cpp  DriverCommandResponseLock.cpp  TbtWmiMailboxCommand.cpp
ThunderboltService/Shared/src/XDomainProperties/: Properties.cpp
common/: CMakeLists.txt  file.cpp  file.h
daemon/: AUTHORS  COPYING.daemon  COPYING.tbtfwucli  ChangeLog  INSTALL  INSTALL.daemon  INSTALL.libtbtfwu  INSTALL.tbtfwucli  README  README.daemon  README.tbtfwucli
daemon/ThunderboltService/Linux/: CMakeLists.txt  build  config.h  config.h.in  pack  pack_src  post_install_script.cmake  thunderbolt.cpp  version.h
daemon/ThunderboltService/Linux/cmake/: poject_macros.cmake
daemon/ThunderboltService/Linux/cmake/Modules/: FindLibDBus-c++-1.cmake  FindLibnl.cmake
daemon/ThunderboltService/Linux/config/: 10-thunderbolt.rules  install.sh  thunderbolt.conf
daemon/ThunderboltService/Linux/include/: ConnectionManager.h  Controller.h  GenlWrapper.h  IController.h  IP2PDevice.h  IPort.h  LinuxControllerCommandSender.h  MessagesWrapper.h  P2PDevice.h  Port.h  logger.h  logind_manager_proxy.h  typedef.h
daemon/ThunderboltService/Linux/src/: ConnectionManager.cpp  Controller.cpp  DBusController.cpp  GenlWrapper.cpp  LinuxControllerCommandSender.cpp  LinuxUtils.cpp  MessageFromFwEvent.cpp  MessageUtils.cpp  P2PDevice.cpp  Port.cpp  logger.cpp
daemon/ThunderboltService/Linux/tests/: CMakeLists.txt  ToDoTest.cpp
daemon/ThunderboltService/Shared/CommonUtils/: CountingSemaphore.cpp
daemon/ThunderboltService/Shared/include/: AutoFD.h  ConnectionManagerBase.h  ControllerDetails.h  ControllerSettings.h  DriverCommandResponseLock.h  IConnectionManager.h  IControllerCommandSender.h  ISerializable.h  MessageFromFwEvent.h  TbtWmiApproveP2P.h  TbtWmiMailboxCommand.h  TbtWmiMessageToFW.h  UniqueID.h  Utils.h  defines.h  tbtException.h
daemon/ThunderboltService/Shared/include/XDomainProperties/: Properties.h
daemon/ThunderboltService/Shared/src/: AutoFD.cpp  ConnectionManagerBase.cpp  ControllerCommandSenderBase.cpp  ControllerDetails.cpp  ControllerSettings.cpp  TbtWmiApproveP2P.cpp  TbtWmiMailboxCommand.cpp  TbtWmiMessageToFW.cpp  UniqueID.cpp  Utils.cpp
daemon/ThunderboltService/Shared/src/XDomainProperties/: Properties.cpp
daemon/cmake/Modules/: FindLibDBus-c++-1.cmake  FindLibnl.cmake  gmock.cmake  rpm-workaround.cmake
daemon/dbus_api/: dbus_controller_api.xml
daemon/fwupdate/libtbtfwu/include/: .clang-format  README
daemon/fwupdate/libtbtfwu/include/tbt/: tbt_fwu_err.h
daemon/fwupdate/libtbtfwu/src/: Controller.h  ControllerFwInfoSource.h  DBusControllersProxy.cpp  DBusControllersProxy.h  DBusCtx.h  Exceptions.cpp  FileFwInfoSource.h  FwInfo.h  HostFwInfo.cpp  HostImageValidator.cpp  IFWUpdateCallback.h  ImageValidator.cpp  ImageValidator.h  log.cpp  tbt_strerror.h  util.h
daemon/fwupdate/tbtfwucli/: BuildVersion.txt  tbtfwucli.cpp
daemon/shared/: GenetlinkInterface.h  general.h  messages.h  tbtdbus.h
dbus_api/: dbus_controllers_api.xml
docs/: CMakeLists.txt  tbtadm.t2t
fwupdate/libtbtfwu/: BuildVersion.txt  CMakeLists.txt  Doxyfile  libtbtfwu.pc.in  visibility.map
fwupdate/libtbtfwu/include/tbt/: tbt_fwu.h  tbt_fwu_controller.h
fwupdate/libtbtfwu/src/: Controller.cpp  Controller.h  ControllerFwInfoSource.cpp  DBusControllerProxy.cpp  DBusControllerProxy.h  DBusCtx.cpp  Exceptions.h  FileFwInfoSource.cpp  FwInfo.cpp  FwInfoSource.cpp  FwInfoSource.h  HostFwInfo.h  HostImageValidator.h  ImageUtilities.cpp  ImageUtilities.h  likely.h  log.h  tbt.cpp  tbt_controller_impl.cpp  tbt_controller_impl.h  tbt_strerror.cpp  util.cpp
fwupdate/tbtfwucli/: BuildVersion.txt  CMakeLists.txt  tbtfwucli.cpp
kernel/: 0000-cover-letter.patch  0001-thunderbolt-Updating-the-register-definitions.patch  0002-thunderbolt-Communication-with-the-ICM-firmware.patch  0003-thunderbolt-Networking-state-machine.patch  0004-thunderbolt-Networking-transmit-and-receive.patch  0005-thunderbolt-Kconfig-for-Thunderbolt-TM-networking.patch  0006-thunderbolt-Networking-doc.patch  thunderbolt_kernel_patch.diff
shared/: GenetlinkInterface.h  Sdk.h  timefunc.h
tbtacl/: CMakeLists.txt  tbtacl  tbtacl.in  tbtacl.rules  tbtacl.rules.in  write.cpp  write.py
tbtadm/: CMakeLists.txt  controller.cpp  controller.h  file.cpp  file.h  main.cpp  tbtadm.bash_completion
tbtxdomain/: CMakeLists.txt  tbtxdomain.in  tbtxdomain.rules.in
tests/: Dockerfile  docker-build.sh  test-integration-mock.py  test.py  test_integration_mock.py
